--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.8.1"
-kotlin = "2.0.0"
+kotlin = "2.0.21"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -12,6 +12,7 @@ majorityJudgmentLibraryJava = "0.4.0"
 koin-bom = "4.1.0-Beta5"
 navigationCompose = "2.8.7"
 room = "2.6.1"
+ksp = "2.0.21-1.0.27" # first part should follow kotlin version
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -33,11 +34,14 @@ koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
 koin-android = { module = "io.insert-koin:koin-android" }
 androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
-androidx-room = { group ="androidx.room", name = "room-runtime", version.ref = "room"}
+androidx-room-runtime = { group ="androidx.room", name = "room-runtime", version.ref = "room"}
+androidx-room-compiler = { group ="androidx.room", name = "room-compiler", version.ref = "room"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 room = { id = "androidx.room", version.ref = "room"}
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
 
