--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,3 +24,13 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+
+      # Upload the APKs to the Releases if there is a git tag
+      # Docs: https://github.com/softprops/action-gh-release
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files:
+        - app/build/outputs/apk/debug/app-debug.apk
+        - app/build/outputs/apk/release/app-release-unsigned.apk
