--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,6 +3,7 @@ name: Android CI
 on:
   push:
     branches: [ "main" ]
+    tags: ['v*']
   pull_request:
     branches: [ "main" ]
 
@@ -24,6 +25,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Check APK
+      run: ls -la app/build/outputs/apk/debug/app-debug.apk
 
       # Upload the APKs to the Releases if there is a git tag
       # Docs: https://github.com/softprops/action-gh-release
