chore: make room works

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,7 @@ koin-android = { module = "io.insert-koin:koin-android" }
 androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-room-runtime = { group ="androidx.room", name = "room-runtime", version.ref = "room"}
 androidx-room-compiler = { group ="androidx.room", name = "room-compiler", version.ref = "room"}
+androidx-room-ktx = { group ="androidx.room", name = "room-ktx", version.ref = "room"}
 
 
 [plugins]
