--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Write the encoded store key file from secrets
       env:
-        STORE_KEY_FILE_BASE64: ${{ secrets.STORE_KEY_FILE_BASE64 }}
+        STORE_KEY_FILE_BASE64: "${{ secrets.STORE_KEY_FILE_BASE64 }}"
       run: echo "$STORE_KEY_FILE_BASE64" > /tmp/skf64
 
     - name: Decode the store key file
@@ -36,16 +36,16 @@ jobs:
 
     - name: Sign the Release APK
       env:
-        STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
-        STORE_KEY_PASSWORD: ${{ secrets.STORE_KEY_PASSWORD }}
+        STORE_PASSWORD: "${{ secrets.STORE_PASSWORD }}"
+        STORE_KEY_PASSWORD: "${{ secrets.STORE_KEY_PASSWORD }}"
         STORE_KEY_FILE_PATH: /tmp/skf.jks
-        STORE_KEY_ALIAS: ${{ secrets.STORE_KEY_ALIAS }}
+        STORE_KEY_ALIAS: "${{ secrets.STORE_KEY_ALIAS }}"
       run: |
         ./gradlew assembleRelease \
-        -Pandroid.injected.signing.store.file=$STORE_KEY_FILE_PATH \
-        -Pandroid.injected.signing.store.password=$STORE_PASSWORD \
-        -Pandroid.injected.signing.key.alias=$STORE_KEY_ALIAS \
-        -Pandroid.injected.signing.key.password=$STORE_KEY_PASSWORD
+        -Pandroid.injected.signing.store.file="$STORE_KEY_FILE_PATH" \
+        -Pandroid.injected.signing.store.password="$STORE_PASSWORD" \
+        -Pandroid.injected.signing.key.alias="$STORE_KEY_ALIAS" \
+        -Pandroid.injected.signing.key.password="$STORE_KEY_PASSWORD"
 
     - name: Delete the store key files
       run: rm /tmp/skf64 && rm /tmp/skf.jks
