--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,23 +50,11 @@ jobs:
     - name: Delete the store key files
       run: rm /tmp/skf64 && rm /tmp/skf.jks
 
-#    - uses: Tlaster/android-sign@v1
-#      name: Sign app APK
-#      with:
-#        releaseDirectory: |
-#          app/build/outputs/apk/release
-#          app/build/outputs/bundle/release
-#        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-#        output: build/release/signed
-#        alias: ${{ secrets.KEY_ALIAS }}
-#        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-#        keyPassword: ${{ secrets.KEY_PASSWORD }}
-#      env:
-#        BUILD_TOOLS_VERSION: "30.0.2"
+    - name: Check Debug APK
+      run: ls app/build/outputs/apk/debug/app-debug.apk
 
-
-    - name: Check APK
-      run: ls -laR app/build/outputs/apk/
+    - name: Check Release APK
+      run: ls app/build/outputs/apk/release/app-release.apk
 
       # Upload the APKs to the Releases if there is a git tag
       # Docs: https://github.com/softprops/action-gh-release
@@ -77,4 +65,3 @@ jobs:
         files: |
           app/build/outputs/apk/debug/app-debug.apk
           app/build/outputs/apk/release/app-release.apk
-          app/build/outputs/apk/release/app-release-unsigned.apk
