--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -13,12 +13,12 @@ name: Scan with Detekt
 
 on:
   # Triggers the workflow on push or pull request events but only for default and protected branches
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  # schedule:
-  #    - cron: '38 7 * * 0'
+#  push:
+#    branches: [ "main" ]
+#  pull_request:
+#    branches: [ "main" ]
+#   schedule:
+#      - cron: '38 7 * * 0'
 
   # Allows running this workflow manually from the Actions tab
   workflow_dispatch:
