--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -15,8 +15,8 @@ on:
   # Triggers the workflow on push or pull request events but only for default and protected branches
 #  push:
 #    branches: [ "main" ]
-#  pull_request:
-#    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 #   schedule:
 #      - cron: '38 7 * * 0'
 
@@ -26,7 +26,7 @@ on:
 env:
   # Release tag associated with version of Detekt to be installed
   # SARIF support (required for this workflow) was introduced in Detekt v1.15.0
-  DETEKT_RELEASE_TAG: v1.15.0
+  DETEKT_RELEASE_TAG: v1.23.8
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
