--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -72,12 +72,14 @@ jobs:
         fi
 
         DETEKT_DOWNLOAD_URL=$(jq --raw-output '.data.repository.release.releaseAssets.nodes[0].downloadUrl' gh_response.json)
+        echo "download_url=$DETEKT_DOWNLOAD_URL"
         echo "download_url=$DETEKT_DOWNLOAD_URL" >> $GITHUB_OUTPUT
 
     # Sets up the detekt cli
     - name: Setup Detekt
       run: |
         dest=$( mktemp -d )
+        echo $dest
         curl --request GET \
           --url ${{ steps.detekt_info.outputs.download_url }} \
           --silent \
