--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -51,7 +51,7 @@ jobs:
           query getReleaseAssetDownloadUrl($tagName: String!) {
             repository(name: "detekt", owner: "detekt") {
               release(tagName: $tagName) {
-                releaseAssets(first: 1) {
+                releaseAssets(first: 2) {
                   nodes {
                     downloadUrl
                   }
@@ -73,7 +73,7 @@ jobs:
           exit 1
         fi
 
-        DETEKT_DOWNLOAD_URL=$(jq --raw-output '.data.repository.release.releaseAssets.nodes[0].downloadUrl' gh_response.json)
+        DETEKT_DOWNLOAD_URL=$(jq --raw-output '.data.repository.release.releaseAssets.nodes[1].downloadUrl' gh_response.json)
         echo "download_url=$DETEKT_DOWNLOAD_URL"
         echo "download_url=$DETEKT_DOWNLOAD_URL" >> $GITHUB_OUTPUT
 
@@ -81,12 +81,12 @@ jobs:
     - name: Setup Detekt
       run: |
         dest=$( mktemp -d )
-        echo $dest
         curl --request GET \
           --url ${{ steps.detekt_info.outputs.download_url }} \
           --silent \
           --location \
-          --output $dest/detekt
+          --output $dest/detekt.zip
+        unzip $dest/detekt.zip -d $dest/
         chmod a+x $dest/detekt
         echo $dest >> $GITHUB_PATH
 
