--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -48,11 +48,14 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         version="${DETEKT_RELEASE_TAG:1}"
-        gh api graphql --field tagName=$DETEKT_RELEASE_TAG --raw-field query='
+        echo -e "version=$version"
+        release_name="detekt-cli-${version}.zip"
+        echo -e "release_name=$release_name\n"
+        gh api graphql --field tagName=$DETEKT_RELEASE_TAG --field releaseName=$release_name --raw-field query='
           query getReleaseAssetDownloadUrl($tagName: String!) {
             repository(name: "detekt", owner: "detekt") {
               release(tagName: $tagName) {
-                releaseAssets(name: "detekt-cli-${version}.zip",first: 1) {
+                releaseAssets(name: $releaseName, first: 1) {
                   nodes {
                     downloadUrl
                   }
@@ -66,6 +69,7 @@ jobs:
         ' 1> gh_response.json
         
         cat gh_response.json
+        echo -e ""
 
         DETEKT_RELEASE_SHA=$(jq --raw-output '.data.repository.release.tagCommit.oid' gh_response.json)
         if [ $DETEKT_RELEASE_SHA != "046263730eb5368cb344489ac36543294e8e87bd" ]; then
