fix(detekt): take care of the last warnings

--- a/detekt.yml
+++ b/detekt.yml
@@ -224,7 +224,11 @@ empty-blocks:
     active: true
   EmptyFunctionBlock:
     active: true
-    ignoreOverridden: false
+    ignoreOverridden: true
+    ignoreAnnotated:
+      - Given
+      - When
+      - Then
   EmptyIfBlock:
     active: true
   EmptyInitBlock:
