--- a/.github/workflows/android_check.yml
+++ b/.github/workflows/android_check.yml
@@ -18,10 +18,11 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execution permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
+    - name: Grant execution permission to gradlew
+      run: chmod +x ./gradlew
+
+    - name: Build the Debug APK with Gradle
       run: ./gradlew build
 
-    - name: Check Debug APK
+    - name: Check the Debug APK
       run: ls app/build/outputs/apk/debug/app-debug.apk
