--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.8.2"
+agp = "8.13.2"
 cucumberAndroid = "4.9.0"
 cucumberPicocontainer = "4.8.1"
 kotlin = "2.0.21"
@@ -10,15 +10,21 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 composeBom = "2025.02.00"
 activityCompose = "1.10.1"
-navigationCompose = "2.8.8"
+lifecycleViewmodelNavigation3 = "2.10.0"
+material3AdaptiveNav3 = "1.3.0-alpha05"
 majorityJudgmentLibraryJava = "0.6.0"
 koin-bom = "4.1.0-Beta5"
 room = "2.6.1"
 ksp = "2.0.21-1.0.27" # first part should follow kotlin version
 serialization = "2.1.0"
 serialization-json = "1.8.0"
+navigation3Ui = "1.0.0"
+navigation3RuntimeVersion = "1.0.0"
 
 [libraries]
+androidx-material3-adaptive-navigation3 = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation3", version.ref = "material3AdaptiveNav3" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycleViewmodelNavigation3" }
+navigation3-ui = { group = "androidx.navigation3", name = "navigation3-ui", version.ref = "navigation3Ui" }
 cucumber-android = { module = "io.cucumber:cucumber-android", version.ref = "cucumberAndroid" }
 cucumber-picocontainer = { module = "io.cucumber:cucumber-picocontainer", version.ref = "cucumberPicocontainer" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -39,11 +45,12 @@ majority-judgment-library-java = { module = "com.github.MieuxVoter:majority-judg
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
 koin-android = { module = "io.insert-koin:koin-android" }
-androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-room-runtime = { group ="androidx.room", name = "room-runtime", version.ref = "room"}
 androidx-room-compiler = { group ="androidx.room", name = "room-compiler", version.ref = "room"}
 androidx-room-ktx = { group ="androidx.room", name = "room-ktx", version.ref = "room"}
 serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization-json" }
+navigation3-runtime = { group = "androidx.navigation3", name = "navigation3-runtime", version.ref = "navigation3RuntimeVersion" }
+
 
 
 [plugins]
