--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,17 @@
-# The order in which these variables are declared "does not matter", so let's make it alphabetical.
+# The order in which these variables are declared "does not matter".
 
 [versions]
 agp = "8.13.2"
+composeCharts = "0.2.5"
+coreKtx = "1.15.0"
 cucumberAndroid = "4.9.0"
 cucumberPicocontainer = "4.8.1"
-kotlin = "2.0.21"
-coreKtx = "1.15.0"
+espressoCore = "3.6.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+kandyLetsPlot = "0.8.3"
+kotlin = "2.2.21"
+ksp = "2.2.21-2.0.5" # first part should follow kotlin version
 kotlinxCollectionsImmutable = "0.4.0"
 lifecycleRuntimeKtx = "2.8.7"
 composeBom = "2025.02.00"
@@ -16,18 +19,20 @@ activityCompose = "1.10.1"
 lifecycleViewmodelNavigation3 = "2.10.0"
 material3AdaptiveNav3 = "1.3.0-alpha05"
 majorityJudgmentLibraryJava = "0.6.0"
-koin-bom = "4.1.0-Beta5"
-room = "2.6.1"
-ksp = "2.0.21-1.0.27" # first part should follow kotlin version
+koin-bom = "4.1.1"
+room = "2.8.4"
 serialization = "2.1.0"
 serialization-json = "1.8.0"
 navigation3Ui = "1.0.0"
 navigation3RuntimeVersion = "1.0.0"
 detekt = "1.23.8"
 
+
 [libraries]
 androidx-material3-adaptive-navigation3 = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation3", version.ref = "material3AdaptiveNav3" }
 androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycleViewmodelNavigation3" }
+compose-charts = { module = "io.github.ehsannarmani:compose-charts", version.ref = "composeCharts" }
+kandy-lets-plot = { module = "org.jetbrains.kotlinx:kandy-lets-plot", version.ref = "kandyLetsPlot" }
 kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinxCollectionsImmutable" }
 navigation3-ui = { group = "androidx.navigation3", name = "navigation3-ui", version.ref = "navigation3Ui" }
 cucumber-android = { module = "io.cucumber:cucumber-android", version.ref = "cucumberAndroid" }
@@ -58,7 +63,6 @@ navigation3-runtime = { group = "androidx.navigation3", name = "navigation3-runt
 detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
 
 
-
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt"}
@@ -67,4 +71,3 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "serialization" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
 room = { id = "androidx.room", version.ref = "room"}
-
